[tool.poetry]
name = "app"
version = "0.1.0"
description = "A ping app."
authors = ["Tai Lucas <tglucas@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
app = "app.__main__:main"

[tool.poetry.dependencies]
python = "^3.11"
icmplib = {git = "https://github.com/tglucas/icmplib.git"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
